#11 docker-compose.yml 의 DEFAULT_REGION 설정에서 double quote 삭제, python 통합테스트 kinesis mock record format 오류 수정 * python 통합테스트 로깅 보강 * python 통합테스트 s3 file content assertion 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - LAMBDA_REMOTE_DOCKER=${LOCALSTACK_LAMBDA_REMOTE_DOCKER:-false}
       - KINESIS_ERROR_PROBABILITY=${KINESIS_ERROR_PROBABILITY:-0.0}
       - DOCKER_HOST=unix:///var/run/docker.sock
-      - DEFAULT_REGION="us-east-1"
+      - DEFAULT_REGION=us-east-1
       - AWS_CBOR_DISABLE=1
     volumes:
       - "${TMPDIR:-/tmp/localstack}:/tmp/localstack"
